feat: add unit tests for EmailVerificationService and CustomUserDetailsService, enhance security configurations